--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -216,7 +216,16 @@
 
             </div>
 
+            <!-- DESCRIPTION SECTION -->
 
+            <div class="row">
+                    <label class="profile-label" for="profile-description">
+                        Full Description
+                    </label>
+                    <input class="form-control" type="textarea" id="profile-description" name="description" rows="3" maxlength="500"
+                        rows="3"
+                        value="{{username.description}}" readonly></input>
+                </div>
 
 
             <!-- COMMUNICATION STYLE SECTION -->
