--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -42,3 +42,9 @@ padding: 0.3rem !important;
     margin: 5vh auto;
     border-radius: 25px;
 }
+
+#profile-description {
+    min-height: 15vh;
+    height: auto;
+    margin-bottom: 5vh;
+}
