Housekeepign in the user area.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1259,6 +1259,12 @@ ul ul a {
   min-height: 15vh;
   height: auto;
   margin-bottom: 5vh;
+  margin-left: 2vw;
+  margin-right: 2vw;
+}
+
+.profile-label {
+  margin-top: 2vh;
 }
 
 .user-wrapper {
