--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -47,4 +47,10 @@ padding: 0.3rem !important;
     min-height: 15vh;
     height: auto;
     margin-bottom: 5vh;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
+.profile-label {
+    margin-top: 2vh;
 }
