--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -230,7 +230,15 @@
                 </div>
             </div>
 
+            <!-- DESCRIPTION SECTION -->
 
+            <div class="row">
+                    <label class="profile-label" for="profile-description">
+                        Full Description
+                    </label>
+                    <input class="form-control" type="textarea" id="profile-description" name="description" rows="3"
+                        maxlength="500" rows="3" value="{{username.description}}"></input>
+                </div>
             <!-- COMMUNICATION STYLE SECTION -->
 
             <div class="row">
