--- a/templates/pages/settings.html
+++ b/templates/pages/settings.html
@@ -11,7 +11,7 @@
 
         <div class="jumbotron form-jumbo mt-0">
             <div class="col-12 jumbo-content mx-auto">
-
+                    {% include 'components/message.html' %}
                 <div class="col-12 mt-0">
                     <h3 class="heading text-center">My Settings</h3>
                     <div class="heading-ul"></div>
