--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1294,6 +1294,12 @@ ul ul a {
   height: 50vh;
 }
 
+@media (max-width: 768px) {
+  .user-image {
+    height: 40vh;
+  }
+}
+
 .user-image img {
   border-radius: 50%;
   height: auto;
@@ -1363,11 +1369,9 @@ ul ul a {
 }
 
 .username {
-  position: absolute;
-  top: 0;
   margin-top: 5vh;
-  left: 20;
   margin-bottom: 5vh;
+  max-width: 20vw;
   font-weight: 700;
   color: #1C2541;
   -webkit-animation: textshadow 8s infinite alternate;
@@ -1380,7 +1384,7 @@ ul ul a {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    margin-top: 0;
+    margin-top: 0 !important;
   }
 }
 
