--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1087,6 +1087,13 @@ ul ul a {
   padding: 0.5rem;
 }
 
+@media (max-width: 768px) {
+  .matches {
+    padding: 0.2rem;
+    line-height: 1.6;
+  }
+}
+
 .results {
   margin: 4rem;
 }
