--- a/static/scss/_search.scss
+++ b/static/scss/_search.scss
@@ -265,6 +265,11 @@ ul ul a {
     background-color: $brightmidblue;
     color: white;
     padding: 0.5rem;
+
+    @media (max-width: $bp-mobile) {
+        padding: 0.2rem;
+        line-height: 1.6;
+    }
 }
 
 .results {
