Fix minor mistake  in newprofile.

--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -311,7 +311,7 @@
                         Github
                     </label>
                     <input id="github" class="form-control" type="text" name="github" maxlength="50"
-                        placeholder="http://github.com/mycodestuffz" readonly>
+                        placeholder="http://github.com/mycodestuffz">
                 </div>
 
             </div>
