--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -54,3 +54,8 @@ padding: 0.3rem !important;
 .profile-label {
     margin-top: 2vh;
 }
+
+.profile-nav {
+    text-transform: uppercase;
+    font-family: 'Share Tech Mono', monospace;
+}
