--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -350,9 +350,11 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="save">Save
-            Changes</button>
+        <div class="row justify-content-center">
 
+        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5 ml-0" name="btn" value="save">Save
+            Changes</button>
+        </div>
     </form>
 
 
