--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -5,8 +5,8 @@
     <div class="container myprofile-wrapper">
 
         <div class="row welcome-row justify-content-center align-items-center">
-            <div class="col-12">
-                <h1>Welcome, {{username}}</h1>
+            <div class="col-12 justify-content-center">
+                <h1 class="profile-nav">Welcome, {{username}}</h1>
 
                 <!-- Display flashed messages. -->
 
@@ -28,10 +28,8 @@
                 <div class="row">
 
                     <div class="col-12 justify-content-center">
-                        <h3 class="profile-heading">
-                            < header>
 
-                        </h3>
+                        <img class="profile-parts" src="/static/img/header.png" />
                     </div>
                     <div class="col-6">
 
@@ -102,10 +100,7 @@
 
                 <div class="col-12 justify-content-center">
 
-                    <h3 class="profile-heading">
-                        < body>
-                            </header>
-                    </h3>
+                        <img class="profile-parts" src="/static/img/body.png" />
 
                 </div>
 
@@ -291,10 +286,7 @@
             <div class="row">
 
                 <div class="col-12">
-                    <h3 class="profile-heading">
-                        < footer>
-
-                    </h3>
+                        <img class="profile-parts" src="/static/img/footer.png" />
                 </div>
 
                 <div class="col-12">
@@ -317,8 +309,12 @@
             </div>
         </div>
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5" name="btn" value="save">Save
+        <div class="row justify-content-center">
+
+        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 ml-0 mb-5" name="btn" value="save">Save
             Changes</button>
+
+        </div>
 
         </form>
 
