--- a/templates/pages/profile.html
+++ b/templates/pages/profile.html
@@ -56,10 +56,8 @@
             <div class="row">
 
                 <div class="col-12 justify-content-center">
-                    <h3 class="profile-heading">
-                        < header>
 
-                    </h3>
+                    <img src="{{"
                 </div>
                 <div class="col-6">
 
