--- a/static/scss/_user_area.scss
+++ b/static/scss/_user_area.scss
@@ -58,4 +58,12 @@ padding: 0.3rem !important;
 .profile-nav {
     text-transform: uppercase;
     font-family: 'Share Tech Mono', monospace;
+    margin-left: 10vw;
+}
+
+.profile-parts {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 20vh;
 }
