--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -31,7 +31,7 @@
 
                         <img class="profile-parts" src="/static/img/header.png" />
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
 
 
 
@@ -44,7 +44,7 @@
 
 
 
-                    <div class="col-6">
+                    <div class="col-12 col-md-6">
 
 
                         <label class="profile-label" for="profile-img">
@@ -288,13 +288,6 @@
                 <div class="col-12">
                         <img class="profile-parts" src="/static/img/footer.png" />
                 </div>
-
-                <div class="col-12">
-                    <label class="contact-label" for="contact">
-                        Contact
-                    </label>
-                </div>
-
                 <div class="col-12">
 
 
