--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -4,7 +4,7 @@
 
     <div class="container myprofile-wrapper">
 
-        <div class="row welcome-row justify-content-center align-items-center">
+        <div class="row welcome-row justify-content-center mt-4 align-items-center">
             <div class="col-12 justify-content-center">
                 <h1 class="profile-nav">Welcome, {{username}}</h1>
 
