--- a/templates/pages/newprofile.html
+++ b/templates/pages/newprofile.html
@@ -100,7 +100,7 @@
 
                 <div class="col-12 justify-content-center">
 
-                        <img class="profile-parts" src="/static/img/body.png" />
+                    <img class="profile-parts" src="/static/img/body.png" />
 
                 </div>
 
@@ -206,12 +206,15 @@
             <!-- DESCRIPTION SECTION -->
 
             <div class="row">
-                <label class="profile-label" for="profile-description">
-                    Full Description
-                </label>
-                <textarea class="form-control" id="profile-description" name="description" rows="3" maxlength="500"
-                    rows="3"
-                    placeholder="Tell us about yourself! The more details you provide, the higher the chance that someone suitable will find you."></textarea>
+
+                <div class="col-12">
+                    <label class="profile-label" for="profile-description">
+                        Full Description
+                    </label>
+                    <textarea class="form-control" id="profile-description" name="description" rows="3" maxlength="500"
+                        rows="3"
+                        placeholder="Tell us about yourself! The more details you provide, the higher the chance that someone suitable will find you."></textarea>
+                </div>
             </div>
 
             <!-- COMMUNICATION STYLE SECTION -->
@@ -286,7 +289,7 @@
             <div class="row">
 
                 <div class="col-12">
-                        <img class="profile-parts" src="/static/img/footer.png" />
+                    <img class="profile-parts" src="/static/img/footer.png" />
                 </div>
                 <div class="col-12">
 
@@ -304,8 +307,9 @@
 
         <div class="row justify-content-center">
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 ml-0 mb-5" name="btn" value="save">Save
-            Changes</button>
+            <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 ml-0 mb-5" name="btn"
+                value="save">Save
+                Changes</button>
 
         </div>
 
