--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1281,12 +1281,24 @@ ul ul a {
   margin-left: 10vw;
 }
 
+.profile-subnav {
+  font-family: 'Share Tech Mono', monospace;
+  margin-left: 10vw;
+}
+
+@media (max-width: 768px) {
+  .profile-subnav {
+    font-size: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+
 .profile-parts {
   width: auto;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
-  max-height: 20vh;
-  margin: 2rem 0;
+  max-height: 15vh;
+  margin: 2rem auto;
 }
 
 .user-wrapper {
