--- a/templates/pages/editprofile.html
+++ b/templates/pages/editprofile.html
@@ -6,7 +6,7 @@
 
     <div class="row welcome-row justify-content-center align-items-center">
         <div class="col-12">
-            <h1>Edit your Profile</h1>
+            <h1 class="profile-nav">Edit your Profile</h1>
 
             <!-- Display flashed messages. -->
 
@@ -22,11 +22,11 @@
 
                 <div class="col-12 justify-content-center">
                     <h3 class="profile-heading">
-                        < header>
+                        <img class="profile-parts" src="/static/img/header.png" />
 
                     </h3>
                 </div>
-                <div class="col-6">
+                <div class="col-12 col-md-6">
 
 
 
@@ -39,7 +39,7 @@
 
 
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
 
 
                     <label class="profile-label" for="profile-img">
@@ -97,8 +97,8 @@
                 <div class="col-12 justify-content-center">
 
                     <h3 class="profile-heading">
-                        < body>
-                            </header>
+                        <img class="profile-parts" src="/static/img/body.png" />
+
                     </h3>
 
                 </div>
@@ -233,12 +233,14 @@
             <!-- DESCRIPTION SECTION -->
 
             <div class="row">
-                    <label class="profile-label" for="profile-description">
-                        Full Description
-                    </label>
-                    <input class="form-control" type="textarea" id="profile-description" name="description" rows="3"
-                        maxlength="500" rows="3" value="{{username.description}}"></input>
+                <div class="col-12">
+                <label class="profile-label" for="profile-description">
+                    Full Description
+                </label>
+                <input class="form-control" type="textarea" id="profile-description" name="description" rows="3"
+                    maxlength="500" rows="3" value="{{username.description}}"></input>
                 </div>
+            </div>
             <!-- COMMUNICATION STYLE SECTION -->
 
             <div class="row">
@@ -325,7 +327,7 @@
 
                 <div class="col-12">
                     <h3 class="profile-heading">
-                        < footer>
+                            <img class="profile-parts" src="/static/img/footer.png" />
 
                     </h3>
                 </div>
@@ -352,8 +354,9 @@
 
         <div class="row justify-content-center">
 
-        <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5 ml-0" name="btn" value="save">Save
-            Changes</button>
+            <button type="submit" class="btn btn-primary btn-large logreg-btn mt-5 mb-5 ml-0" name="btn"
+                value="save">Save
+                Changes</button>
         </div>
     </form>
 
