--- a/templates/layouts/footer.html
+++ b/templates/layouts/footer.html
@@ -1,7 +1,7 @@
 {% block footer %}
 <!-- column sizes in footer different on activities page because of filters bar on right making the width of the footer smaller -->
 <footer>
-    <div class="container-fluid footer-container">
+    <div class="container-fluid footer">
 
     </div>
 </footer>
